changed implementation using mutation for person/move_to